--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     repositories {
         google()
+
+        // Add this line into `repositories` in `buildscript`
         mavenCentral()
     }
     dependencies {
