模块 3：添加身份验证 在此模块中，您将使用 Amplify CLI 和库配置和添加身份验证到您的应用程序中。
https://aws.amazon.com/cn/getting-started/hands-on/build-android-app-amplify/module-three/

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     // Amplify core dependency
     implementation 'com.amplifyframework:core:1.4.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.4.0'    //向项目添加 Amplify 身份验证库
+
 }
